# filtc

./: README.md  default.nix  flake.nix  pack.nix  pyproject.toml  python_shell.nix  test_overlay.nix
berpfpy/: berpf.py
filtc/: __init__.py  filtc.py
filteringpy/: filter.py
tests/: test_interface.py  test_sample.py
