[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "filtering.py"
description = "My package description"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.scripts]
my-script = "filteringpy.module:function"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
